<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="200dp"
        android:textColor="@color/colorPrimaryDark"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map"
        android:id="@+id/btnMap"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="75dp"
        android:textColor="@color/colorPrimary"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/btnMainSearch"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        />


</LinearLayout>

