<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RestaurantDetailsActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:text="@string/restaurant_name"
        android:textSize="40sp"
        android:textStyle="bold"
        android:gravity="center"/>
    <TextView
        android:id="@+id/address"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="15sp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:textSize="12sp"
        android:gravity="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10sp">

        <TextView
            android:id="@+id/hazard"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/potential_grade"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/grade"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/current_grade"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>



    <TextView
        android:id="@+id/violations"
        android:layout_marginTop="25sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/infraction"
        android:textSize="17.5sp"
        android:padding="20sp"/>


</LinearLayout>