<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextLocation"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:paddingStart="40dp"
            android:background="@drawable/background"
            />

<!--        <EditText-->
<!--            android:id="@+id/editTextLocation"-->
<!--            android:layout_width="325dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@drawable/background"-->
<!--            />-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSearch"
            android:layout_gravity="end"
            android:text="@string/search"
            android:onClick="onSearch"/>



    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:context=".MapsActivity" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnZoomIn"
            android:text="@string/zoomIn"
            android:layout_gravity="center_vertical"
            android:onClick="onZoom"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnZoomOut"
            android:text="@string/zoomOut"
            android:layout_gravity="center_vertical"
            android:onClick="onZoom"/>

        <Button
            android:id="@+id/btnChangeMapType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:onClick="onChangeMapType"
            android:text="@string/mapType" />

    </LinearLayout>


</LinearLayout>

